[package]
name = "rust-git"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"          
sha1 = "0.10"           
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"      
chrono = "0.4"          
clap = { version = "4.4", features = ["derive"] }   
walkdir = "2.4"         
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "errhandlingapi"] } 
lazy_static = "1.4"  